[package]
name = "taur"
version = "0.1.6"
authors = ["Arne Janbu <arnej@arnej.de>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/arnej/taur"
repository = "https://github.com/arnej/taur.git"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["arch", "archlinux", "AUR"]
description = """
A tiny helper for managing AUR package repositories.
"""
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
directories = "4.0"
git2 = "0.14"
raur = "6.0"
termion = "1.5"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
