[package]
name = "taur"
version = "0.1.7"
authors = ["Arne Janbu <arnej@arnej.de>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/arnej/taur"
repository = "https://github.com/arnej/taur.git"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["arch", "archlinux", "AUR"]
description = """
A tiny helper for managing AUR package repositories.
"""
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
directories = "4.0"
git2 = "0.15"
raur = "6.0"
termion = "2.0"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
