[package]
name = "taur"
version = "0.2.0"
authors = ["Arne Janbu <arnej@arnej.de>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/arnej/taur"
repository = "https://github.com/arnej/taur.git"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["arch", "archlinux", "AUR"]
description = """
A tiny helper for managing AUR package repositories.
"""
edition = "2018"

[dependencies]
clap = { version = "4.1", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
directories = "5.0"
futures = { version = "0.3.26", features = ["std"] }
git2 = "0.19"
raur = "7.0"
termion = "4.0"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
